--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/minor_project_jbdl25
+spring.datasource.username=root
+spring.datasource.password=mysql123
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.springframework=debug
+spring.jpa.show-sql=true
