--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/minor_project_jbdl25
 spring.datasource.username=root
 spring.datasource.password=mysql123
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 logging.level.org.springframework=debug
 spring.jpa.show-sql=true
+app.security.admin_role=ADM
+app.security.student_role=STD
